Thu Oct 30 02:20:33 2008  Yusuke Endoh  <mame@tsg.ne.jp>

	* array.c (rb_ary_sort_bang): remove SEGV when replacing array with
	  embedded one during sort.  [ruby-dev:36983]

	* test/ruby/test_array.rb (test_sort!): add tests for above.

Thu Oct 30 01:44:23 2008  Yusuke Endoh  <mame@tsg.ne.jp>

	* test/ruby/test_array.rb: add some tests.

Thu Oct 30 01:32:15 2008  Yusuke Endoh  <mame@tsg.ne.jp>

	* array.c (rb_ary_splice): remove redundant check.

Thu Oct 30 01:24:55 2008  Yusuke Endoh  <mame@tsg.ne.jp>

	* string.c (rb_str_cmp): fix condition which always returned true
	  because ENCODING_GET returns unsigned long.

Thu Oct 30 01:10:32 2008  Yusuke Endoh  <mame@tsg.ne.jp>

	* test/ruby/test_array.rb (test_permutation): add a test that replaces
	  array during permutation.

Wed Oct 29 23:31:34 2008  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* string.c (rb_str_check_dummy_enc): new function to check dummy
	  encoding.

	* string.c (rb_str_upcase_bang): case conversion functions should
	  not be applicable to strings in dummy encoding.  [ruby-dev:36985]

Wed Oct 29 23:57:29 2008  Yusuke Endoh  <mame@tsg.ne.jp>

	* array.c (rb_ary_sort_bang): replacing array during sort broke
          invariant of array.  [ruby-dev:36983]

Wed Oct 29 21:06:46 2008  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* io.c (rb_io_rewind): should reset fptr->readconv if it's
	  available.

	* io.c (more_char): clear readconv at EOF.

	* test/ruby/test_file.rb: should not read after EOF.  use rewind
	  instead.

Wed Oct 29 20:45:08 2008  Yusuke Endoh  <mame@tsg.ne.jp>

	* test/webrick/utils.rb (start_server): provide a reference to log of
	  webrick.

	* test/webrick/test_httpproxy.rb, test/webrick/test_httpauth.rb,
	  test/webrick/test_cgi.rb, test/webrick/test_httpserver.rb,
	  test/webrick/test_server.rb, test/webrick/test_filehandler.rb: use
	  webrick log as an assertion message.

Wed Oct 29 16:41:17 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>
