@@ -1,3 +1,12 @@
+Thu Oct 30 09:31:45 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* encoding.c (rb_locale_encoding): makes an alias for locale.
+	  [ruby-dev:36976]
+
+	* encoding.c (rb_enc_set_default_external): ditto for external.
+
+	* encoding.c (rb_enc_set_default_internal): ditto for internal.
+
 Thu Oct 30 02:20:33 2008  Yusuke Endoh  <mame@tsg.ne.jp>
 
 	* array.c (rb_ary_sort_bang): remove SEGV when replacing array with
